--- a/a/index.html
+++ b/a/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <h2>Age Calculator</h2>
-        <label for="birthdate">Enter your birthdate (DD-MM-YYYY):</label>
-        <input type="text" id="birthdate" placeholder="DD-MM-YYYY">
+        <label for="birthdate">Enter your birthdate:</label>
+        <input type="date" id="birthdate" >
         <button onclick="calculateAge()">Calculate</button>
         <p id="result"></p>
     </div>
