--- a/a/index.html
+++ b/a/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h2>Age Calculator</h2>
         <label for="birthdate">Enter your birthdate:</label>
-        <input type="date" id="birthdate" >
+        <input type="date" id="birthdate" onkeydown="return false">
         <button onclick="calculateAge()">Calculate</button>
         <p id="result"></p>
     </div>
