--- a/a/index.html
+++ b/a/index.html
@@ -3,17 +3,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Age Calculator</title>
+    <title>Dynamic Calendar</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            color: #fff;
+        }
+        .calendar-container {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(10px);
+            text-align: center;
+        }
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        button {
+            background: rgba(255, 255, 255, 0.2);
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+        }
+        button:hover {
+            background: rgba(255, 255, 255, 0.4);
+        }
+        .calendar {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 5px;
+        }
+        .calendar div {
+            padding: 10px;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+            cursor: pointer;
+            transition: transform 0.3s ease-in-out;
+        }
+        .calendar div:hover {
+            transform: scale(1.1);
+            background: rgba(255, 255, 255, 0.4);
+        }
+        #date-info {
+            margin-top: 10px;
+            font-size: 1.2em;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Age Calculator</h2>
-        <label for="birthdate">Enter your birthdate:</label>
-        <input type="date" id="birthdate" onkeydown="return false">
-        <button onclick="calculateAge()">Calculate</button>
-        <p id="result"></p>
+    <div class="calendar-container">
+        <div class="header">
+            <button id="prev-year">&#9664;&#9664;</button>
+            <button id="prev-month">&#9664;</button>
+            <span id="current-month-year"></span>
+            <button id="next-month">&#9654;</button>
+            <button id="next-year">&#9654;&#9654;</button>
+        </div>
+        <div class="calendar" id="calendar"></div>
+        <p id="date-info"></p>
     </div>
-    <script src="script.js"></script>
+    <script>
+        const calendarEl = document.getElementById("calendar");
+        const currentMonthYear = document.getElementById("current-month-year");
+        const dateInfo = document.getElementById("date-info");
+        let currentDate = new Date();
+
+        function renderCalendar() {
+            calendarEl.innerHTML = "";
+            const year = currentDate.getFullYear();
+            const month = currentDate.getMonth();
+            currentMonthYear.textContent = `${currentDate.toLocaleString('default', { month: 'long' })} ${year}`;
+
+            const firstDay = new Date(year, month, 1).getDay();
+            const lastDate = new Date(year, month + 1, 0).getDate();
+
+            for (let i = 0; i < firstDay; i++) {
+                const emptyCell = document.createElement("div");
+                calendarEl.appendChild(emptyCell);
+            }
+
+            for (let i = 1; i <= lastDate; i++) {
+                const dateCell = document.createElement("div");
+                dateCell.textContent = i;
+                dateCell.addEventListener("click", () => calculateDays(year, month, i));
+                calendarEl.appendChild(dateCell);
+            }
+        }
+
+        function calculateDays(year, month, day) {
+            const selectedDate = new Date(year, month, day);
+            const today = new Date();
+            today.setHours(0, 0, 0, 0);
+
+            const diffTime = selectedDate - today;
+            const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+            
+            if (diffDays > 0) {
+                dateInfo.textContent = `${diffDays} days to come`;
+            } else if (diffDays < 0) {
+                dateInfo.textContent = `${Math.abs(diffDays)} days have passed`;
+            } else {
+                dateInfo.textContent = "Today!";
+            }
+        }
+
+        document.getElementById("prev-month").addEventListener("click", () => {
+            currentDate.setMonth(currentDate.getMonth() - 1);
+            renderCalendar();
+        });
+        document.getElementById("next-month").addEventListener("click", () => {
+            currentDate.setMonth(currentDate.getMonth() + 1);
+            renderCalendar();
+        });
+        document.getElementById("prev-year").addEventListener("click", () => {
+            currentDate.setFullYear(currentDate.getFullYear() - 1);
+            renderCalendar();
+        });
+        document.getElementById("next-year").addEventListener("click", () => {
+            currentDate.setFullYear(currentDate.getFullYear() + 1);
+            renderCalendar();
+        });
+
+        renderCalendar();
+    </script>
 </body>
 </html>
