--- a/a/index.html
+++ b/a/index.html
@@ -5,72 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Calendar</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            color: #fff;
-        }
-        .calendar-container {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-            backdrop-filter: blur(10px);
-            text-align: center;
-            display: flex;
-            gap: 20px;
-        }
-        .year-control, .month-control {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 10px;
-        }
-        .calendar-wrapper {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        button {
-            background: rgba(255, 255, 255, 0.2);
-            border: none;
-            padding: 10px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: all 0.3s ease-in-out;
-        }
-        button:hover {
-            background: rgba(255, 255, 255, 0.4);
-        }
-        .calendar {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: 5px;
-            margin-top: 10px;
-        }
-        .calendar div {
-            padding: 10px;
-            background: rgba(255, 255, 255, 0.2);
-            border-radius: 5px;
-            cursor: pointer;
-            transition: transform 0.3s ease-in-out;
-        }
-        .calendar div:hover {
-            transform: scale(1.1);
-            background: rgba(255, 255, 255, 0.4);
-        }
-        #date-info {
-            margin-top: 10px;
-            font-size: 1.2em;
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
     <div class="calendar-container">
@@ -90,71 +24,6 @@
             <button id="next-month">Next Month &#9654;</button>
         </div>
     </div>
-    <script>
-        const calendarEl = document.getElementById("calendar");
-        const currentMonthYear = document.getElementById("current-month-year");
-        const currentYearEl = document.getElementById("current-year");
-        const dateInfo = document.getElementById("date-info");
-        let currentDate = new Date();
-
-        function renderCalendar() {
-            calendarEl.innerHTML = "";
-            const year = currentDate.getFullYear();
-            const month = currentDate.getMonth();
-            currentMonthYear.textContent = `${currentDate.toLocaleString('default', { month: 'long' })}`;
-            currentYearEl.textContent = year;
-
-            const firstDay = new Date(year, month, 1).getDay();
-            const lastDate = new Date(year, month + 1, 0).getDate();
-
-            for (let i = 0; i < firstDay; i++) {
-                const emptyCell = document.createElement("div");
-                calendarEl.appendChild(emptyCell);
-            }
-
-            for (let i = 1; i <= lastDate; i++) {
-                const dateCell = document.createElement("div");
-                dateCell.textContent = i;
-                dateCell.addEventListener("click", () => calculateDays(year, month, i));
-                calendarEl.appendChild(dateCell);
-            }
-        }
-
-        function calculateDays(year, month, day) {
-            const selectedDate = new Date(year, month, day);
-            const today = new Date();
-            today.setHours(0, 0, 0, 0);
-
-            const diffTime = selectedDate - today;
-            const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
-            
-            if (diffDays > 0) {
-                dateInfo.textContent = `${diffDays} days to come`;
-            } else if (diffDays < 0) {
-                dateInfo.textContent = `${Math.abs(diffDays)} days have passed`;
-            } else {
-                dateInfo.textContent = "Today!";
-            }
-        }
-
-        document.getElementById("prev-month").addEventListener("click", () => {
-            currentDate.setMonth(currentDate.getMonth() - 1);
-            renderCalendar();
-        });
-        document.getElementById("next-month").addEventListener("click", () => {
-            currentDate.setMonth(currentDate.getMonth() + 1);
-            renderCalendar();
-        });
-        document.getElementById("prev-year").addEventListener("click", () => {
-            currentDate.setFullYear(currentDate.getFullYear() - 1);
-            renderCalendar();
-        });
-        document.getElementById("next-year").addEventListener("click", () => {
-            currentDate.setFullYear(currentDate.getFullYear() + 1);
-            renderCalendar();
-        });
-
-        renderCalendar();
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
