--- a/p/pasword.html
+++ b/p/pasword.html
@@ -15,6 +15,6 @@
         </div>
         <button onclick="generatePassword()">Generate Password</button>
     </div>
-    <script src="script.js"></script>
+    <script src="p.js"></script>
 </body>
 </html>
