--- a/h/index.html
+++ b/h/index.html
@@ -18,8 +18,12 @@
     <div id="loadingPopup" class="popup">
         <div class="popup-content">
             <p id="loadingText">Scanning...</p>
+            <div class="loading-container">
+                <div id="loadingBar" class="loading-bar"></div>
+            </div>
         </div>
     </div>
+    
 
     <div id="finalPopup" class="popup">
         <div class="popup-content">
